candidate photo stretching fix

--- a/development/styles/_candidate.css
+++ b/development/styles/_candidate.css
@@ -11,9 +11,11 @@
         }
             .candidate__photo {
                 vertical-align: top;
+                min-height: 269px;
                 background-color: var(--image-fallback);
                 border-radius: 5px;
                 box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+                object-fit: cover; /* in case they want fixed height */
             }
 
         .candidate__data {
